--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,18 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "phpunit/php-timer": "^1.0"
     },
     "autoload": {
         "psr-0": {
             "HelloWorld": "src/"
+        },
+        "classname": {
+          "PHP_Timer": "src/"
         }
+    },
+    "scripts": {
+      "test": ["php tests/test.php", "echo Hello"]
     }
 }
